--- a/src/App.css
+++ b/src/App.css
@@ -123,8 +123,7 @@ input:focus {
 .all-pups-div {
   display: flex;
   flex-direction: column;
-  margin: auto;
-  left: 10%;
+  margin: auto -20rem;
   width: 80rem;
   justify-content: center;
   column-count: 3;
